objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comment on Contact</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Source__c</field>
                <operation>equals</operation>
                <value>FleetSeek, D&amp;B</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Corporate Contacts</relationshipLabel>
        <relationshipName>Corporate_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadBrand__c</fullName>
        <label>Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadIndustry__c</fullName>
        <label>Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSegment__c</fullName>
        <label>Segment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Attended_Trade_Show_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Trade Show Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Attended_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Truck_Configuration_URL__c</fullName>
        <label>Truck Configuration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_User_Comments__c</fullName>
        <label>User Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Corporate_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non Corporate Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Source__c</field>
                <operation>equals</operation>
                <value>Dealer, Corporate User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>My Contacts</relationshipLabel>
        <relationshipName>Non_3rd_Party_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Contact&apos;s job role/responsibility</description>
        <label>Responsibilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Business Manager</fullName>
                </value>
                <value>
                    <fullName>Business Plan Contact</fullName>
                </value>
                <value>
                    <fullName>Business/Finance</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Corporate Manager</fullName>
                </value>
                <value>
                    <fullName>Cust Support</fullName>
                </value>
                <value>
                    <fullName>Dealer Development Support</fullName>
                </value>
                <value>
                    <fullName>Dealer Principal</fullName>
                </value>
                <value>
                    <fullName>Dealer System Administrator</fullName>
                </value>
                <value>
                    <fullName>District Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Executive Mgmt</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fleet General</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Internal - General</fullName>
                </value>
                <value>
                    <fullName>Lease and Rental Manager</fullName>
                </value>
                <value>
                    <fullName>Lease and Rental Ops Dir/Mgr</fullName>
                </value>
                <value>
                    <fullName>Leasing Salesperson</fullName>
                </value>
                <value>
                    <fullName>Leasing Technician</fullName>
                </value>
                <value>
                    <fullName>Manager Account</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Mktg, New Truck</fullName>
                </value>
                <value>
                    <fullName>Mktg, Used Truck</fullName>
                </value>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Operations Dir/Mgr</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Sales Coordinator</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Sales Manager</fullName>
                </value>
                <value>
                    <fullName>New Vehicle Salesperson</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source for the Contact data</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                    <default>true</default>
                    <label>Dealer</label>
                </value>
                <value>
                    <fullName>FleetSeek</fullName>
                </value>
                <value>
                    <fullName>D&amp;B</fullName>
                </value>
                <value>
                    <fullName>Corporate_User</fullName>
                    <label>Corporate User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Corporate_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>FleetSeek,D&amp;B</value>
        </filters>
        <label>Corporate Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Extension__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Comments__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Merge</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Account.MergeStatus__c = &apos;Merged&apos;, 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
$User.CommunityNickname &lt;&gt; &apos;DealerSiteGuestUser&apos;, 
$Profile.Name &lt;&gt; $Label.Vgtna_System_Integrator_Profile_Name 
)</errorConditionFormula>
        <errorMessage>Merged Account - Unable to Save (Cancel).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Email_Phone_or_Mobile_Validation</fullName>
        <active>true</active>
        <description>User must not be able to save a Contact record without having at least one of the following fields complete: Email, Phone or Mobile</description>
        <errorConditionFormula>AND(ISBLANK(Email),ISBLANK(Phone),ISBLANK( MobilePhone))</errorConditionFormula>
        <errorMessage>You must provide at-least one of the following information - Email, Phone or Mobile.</errorMessage>
    </validationRules>
</CustomObject>